@@ -379,7 +379,7 @@ static NSString *PWD_ENVVALUE = @"~";
     
     iIdleCount=0;
     
-    //NSLog(@"event:%@ (%x+%x)[%@][%@]:%x(%c)", event,modflag,keycode,keystr,unmodkeystr,unicode,unicode);
+    //NSLog(@"event:%@ (%x+%x)[%@][%@]:%x(%c) <%d>", event,modflag,keycode,keystr,unmodkeystr,unicode,unicode,(modflag & NSNumericPadKeyMask));
     
     // Clear the bell
     [self setBell: NO];
